--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 JWT_SECRET=mysecretis4356
-MONGO_LOCAL_CONN_URL=mongodb+srv://tjones104:4356@labs.nl69h.mongodb.net/mern_bug_tracker?retryWrites=true&w=majority
-MONGO_DB_NAME=mern_bug_tracker
+MONGO_LOCAL_CONN_URL=mongodb+srv://tjones104:4356@labs.nl69h.mongodb.net/shopping_cart_dashboard?retryWrites=true&w=majority
+MONGO_DB_NAME=shopping_cart_dashboard
